--- a/requirements.txt
+++ b/requirements.txt
@@ -1,159 +1,142 @@
-# This file may be used to create an environment using:
-# $ conda create --name <env> --file <this file>
-# platform: osx-64
-accelerate=0.27.2=pypi_0
-aiohttp=3.9.3=pypi_0
-aiosignal=1.3.1=pypi_0
-annotated-types=0.6.0=pypi_0
-anyio=4.2.0=pypi_0
-appnope=0.1.4=pypi_0
-argon2-cffi=23.1.0=pypi_0
-argon2-cffi-bindings=21.2.0=pypi_0
-arrow=1.3.0=pypi_0
-asttokens=2.4.1=pypi_0
-async-lru=2.0.4=pypi_0
-attrs=23.2.0=pypi_0
-babel=2.14.0=pypi_0
-beautifulsoup4=4.12.3=pypi_0
-bleach=6.1.0=pypi_0
-bzip2=1.0.8=h1de35cc_0
-ca-certificates=2023.12.12=hecd8cb5_0
-certifi=2024.2.2=pypi_0
-cffi=1.16.0=pypi_0
-charset-normalizer=3.3.2=pypi_0
-comm=0.2.1=pypi_0
-contourpy=1.2.0=pypi_0
-cycler=0.12.1=pypi_0
-datasets=2.17.0=pypi_0
-debugpy=1.8.1=pypi_0
-decorator=5.1.1=pypi_0
-defusedxml=0.7.1=pypi_0
-dill=0.3.8=pypi_0
-distro=1.9.0=pypi_0
-executing=2.0.1=pypi_0
-expat=2.5.0=hcec6c5f_0
-fastjsonschema=2.19.1=pypi_0
-filelock=3.13.1=pypi_0
-fonttools=4.49.0=pypi_0
-fqdn=1.5.1=pypi_0
-frozenlist=1.4.1=pypi_0
-fsspec=2023.10.0=pypi_0
-h11=0.14.0=pypi_0
-httpcore=1.0.3=pypi_0
-httpx=0.26.0=pypi_0
-huggingface-hub=0.20.3=pypi_0
-idna=3.6=pypi_0
-ipykernel=6.29.2=pypi_0
-ipython=8.21.0=pypi_0
-ipywidgets=8.1.2=pypi_0
-isoduration=20.11.0=pypi_0
-jedi=0.19.1=pypi_0
-jinja2=3.1.3=pypi_0
-json5=0.9.14=pypi_0
-jsonpointer=2.4=pypi_0
-jsonschema=4.21.1=pypi_0
-jsonschema-specifications=2023.12.1=pypi_0
-jupyter=1.0.0=pypi_0
-jupyter-client=8.6.0=pypi_0
-jupyter-console=6.6.3=pypi_0
-jupyter-core=5.7.1=pypi_0
-jupyter-events=0.9.0=pypi_0
-jupyter-lsp=2.2.2=pypi_0
-jupyter-server=2.12.5=pypi_0
-jupyter-server-terminals=0.5.2=pypi_0
-jupyterlab=4.1.1=pypi_0
-jupyterlab-pygments=0.3.0=pypi_0
-jupyterlab-server=2.25.3=pypi_0
-jupyterlab-widgets=3.0.10=pypi_0
-kiwisolver=1.4.5=pypi_0
-libcxx=14.0.6=h9765a3e_0
-libffi=3.4.4=hecd8cb5_0
-markupsafe=2.1.5=pypi_0
-matplotlib=3.8.3=pypi_0
-matplotlib-inline=0.1.6=pypi_0
-mistune=3.0.2=pypi_0
-mpmath=1.3.0=pypi_0
-multidict=6.0.5=pypi_0
-multiprocess=0.70.16=pypi_0
-nbclient=0.9.0=pypi_0
-nbconvert=7.16.0=pypi_0
-nbformat=5.9.2=pypi_0
-ncurses=6.4=hcec6c5f_0
-nest-asyncio=1.6.0=pypi_0
-networkx=3.2.1=pypi_0
-notebook=7.1.0=pypi_0
-notebook-shim=0.2.4=pypi_0
-numpy=1.26.4=pypi_0
-openai=1.12.0=pypi_0
-openssl=3.0.13=hca72f7f_0
-overrides=7.7.0=pypi_0
-packaging=23.2=pypi_0
-pandas=2.2.0=pypi_0
-pandocfilters=1.5.1=pypi_0
-parso=0.8.3=pypi_0
-peft=0.8.2=pypi_0
-pexpect=4.9.0=pypi_0
-pillow=10.2.0=pypi_0
-pip=23.3.1=py312hecd8cb5_0
-platformdirs=4.2.0=pypi_0
-prometheus-client=0.20.0=pypi_0
-prompt-toolkit=3.0.43=pypi_0
-psutil=5.9.8=pypi_0
-ptyprocess=0.7.0=pypi_0
-pure-eval=0.2.2=pypi_0
-pyarrow=15.0.0=pypi_0
-pyarrow-hotfix=0.6=pypi_0
-pycparser=2.21=pypi_0
-pydantic=2.6.1=pypi_0
-pydantic-core=2.16.2=pypi_0
-pygments=2.17.2=pypi_0
-pyparsing=3.1.1=pypi_0
-python=3.12.1=hd58486a_0
-python-dateutil=2.8.2=pypi_0
-python-json-logger=2.0.7=pypi_0
-pytz=2024.1=pypi_0
-pyyaml=6.0.1=pypi_0
-pyzmq=25.1.2=pypi_0
-qtconsole=5.5.1=pypi_0
-qtpy=2.4.1=pypi_0
-readline=8.2=hca72f7f_0
-referencing=0.33.0=pypi_0
-regex=2023.12.25=pypi_0
-requests=2.31.0=pypi_0
-rfc3339-validator=0.1.4=pypi_0
-rfc3986-validator=0.1.1=pypi_0
-rpds-py=0.18.0=pypi_0
-safetensors=0.4.2=pypi_0
-send2trash=1.8.2=pypi_0
-setuptools=68.2.2=py312hecd8cb5_0
-six=1.16.0=pypi_0
-sniffio=1.3.0=pypi_0
-soupsieve=2.5=pypi_0
-sqlite=3.41.2=h6c40b1e_0
-stack-data=0.6.3=pypi_0
-sympy=1.12=pypi_0
-terminado=0.18.0=pypi_0
-tinycss2=1.2.1=pypi_0
-tk=8.6.12=h5d9f67b_0
-tokenizers=0.15.2=pypi_0
-torch=2.2.0=pypi_0
-torchvision=0.17.0=pypi_0
-tornado=6.4=pypi_0
-tqdm=4.66.2=pypi_0
-traitlets=5.14.1=pypi_0
-transformers=4.37.2=pypi_0
-types-python-dateutil=2.8.19.20240106=pypi_0
-typing-extensions=4.9.0=pypi_0
-tzdata=2024.1=pypi_0
-uri-template=1.3.0=pypi_0
-urllib3=2.2.0=pypi_0
-wcwidth=0.2.13=pypi_0
-webcolors=1.13=pypi_0
-webencodings=0.5.1=pypi_0
-websocket-client=1.7.0=pypi_0
-wheel=0.41.2=py312hecd8cb5_0
-widgetsnbextension=4.0.10=pypi_0
-xxhash=3.4.1=pypi_0
-xz=5.4.5=h6c40b1e_0
-yarl=1.9.4=pypi_0
-zlib=1.2.13=h4dc903c_0
+accelerate==0.27.2
+aiohttp==3.9.3
+aiosignal==1.3.1
+annotated-types==0.6.0
+anyio==4.2.0
+appnope==0.1.4
+argon2-cffi==23.1.0
+argon2-cffi-bindings==21.2.0
+arrow==1.3.0
+asttokens==2.4.1
+async-lru==2.0.4
+attrs==23.2.0
+Babel==2.14.0
+beautifulsoup4==4.12.3
+bleach==6.1.0
+certifi==2024.2.2
+cffi==1.16.0
+charset-normalizer==3.3.2
+comm==0.2.1
+contourpy==1.2.0
+cycler==0.12.1
+datasets==2.17.0
+debugpy==1.8.1
+decorator==5.1.1
+defusedxml==0.7.1
+dill==0.3.8
+distro==1.9.0
+executing==2.0.1
+fastjsonschema==2.19.1
+filelock==3.13.1
+fonttools==4.49.0
+fqdn==1.5.1
+frozenlist==1.4.1
+fsspec==2023.10.0
+h11==0.14.0
+httpcore==1.0.3
+httpx==0.26.0
+huggingface-hub==0.20.3
+idna==3.6
+ipykernel==6.29.2
+ipython==8.21.0
+ipywidgets==8.1.2
+isoduration==20.11.0
+jedi==0.19.1
+Jinja2==3.1.3
+json5==0.9.14
+jsonpointer==2.4
+jsonschema==4.21.1
+jsonschema-specifications==2023.12.1
+jupyter==1.0.0
+jupyter-console==6.6.3
+jupyter-events==0.9.0
+jupyter-lsp==2.2.2
+jupyter_client==8.6.0
+jupyter_core==5.7.1
+jupyter_server==2.12.5
+jupyter_server_terminals==0.5.2
+jupyterlab==4.1.1
+jupyterlab_pygments==0.3.0
+jupyterlab_server==2.25.3
+jupyterlab_widgets==3.0.10
+kiwisolver==1.4.5
+MarkupSafe==2.1.5
+matplotlib==3.8.3
+matplotlib-inline==0.1.6
+mistune==3.0.2
+mpmath==1.3.0
+multidict==6.0.5
+multiprocess==0.70.16
+nbclient==0.9.0
+nbconvert==7.16.0
+nbformat==5.9.2
+nest-asyncio==1.6.0
+networkx==3.2.1
+notebook==7.1.0
+notebook_shim==0.2.4
+numpy==1.26.4
+openai==1.12.0
+overrides==7.7.0
+packaging==23.2
+pandas==2.2.0
+pandocfilters==1.5.1
+parso==0.8.3
+peft==0.8.2
+pexpect==4.9.0
+pillow==10.2.0
+platformdirs==4.2.0
+prometheus_client==0.20.0
+prompt-toolkit==3.0.43
+psutil==5.9.8
+ptyprocess==0.7.0
+pure-eval==0.2.2
+pyarrow==15.0.0
+pyarrow-hotfix==0.6
+pycparser==2.21
+pydantic==2.6.1
+pydantic_core==2.16.2
+Pygments==2.17.2
+pyparsing==3.1.1
+python-dateutil==2.8.2
+python-json-logger==2.0.7
+pytz==2024.1
+PyYAML==6.0.1
+pyzmq==25.1.2
+qtconsole==5.5.1
+QtPy==2.4.1
+referencing==0.33.0
+regex==2023.12.25
+requests==2.31.0
+rfc3339-validator==0.1.4
+rfc3986-validator==0.1.1
+rpds-py==0.18.0
+safetensors==0.4.2
+Send2Trash==1.8.2
+setuptools==68.2.2
+six==1.16.0
+sniffio==1.3.0
+soupsieve==2.5
+stack-data==0.6.3
+sympy==1.12
+terminado==0.18.0
+tinycss2==1.2.1
+tokenizers==0.15.2
+torch==2.2.0
+torchvision==0.17.0
+tornado==6.4
+tqdm==4.66.2
+traitlets==5.14.1
+transformers==4.37.2
+types-python-dateutil==2.8.19.20240106
+typing_extensions==4.9.0
+tzdata==2024.1
+uri-template==1.3.0
+urllib3==2.2.0
+wcwidth==0.2.13
+webcolors==1.13
+webencodings==0.5.1
+websocket-client==1.7.0
+wheel==0.41.2
+widgetsnbextension==4.0.10
+xxhash==3.4.1
+yarl==1.9.4
